<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.example.cointwo.ui.MainActivity">
  <item
    android:id="@+id/home"
    android:title="@string/menu_home"
    android:icon="@drawable/ic_launcher_foreground"
    app:showAsAction="never" />
  <item
    android:id="@+id/assets"
    android:title="@string/menu_assets"
    android:icon="@drawable/ic_launcher_foreground"
    app:showAsAction="never" />
  <item
    android:id="@+id/money"
    android:title="@string/menu_money"
    android:icon="@drawable/ic_launcher_foreground"
    app:showAsAction="never" />
  <item
    android:id="@+id/plus"
    android:title="@string/menu_plus"
    android:icon="@drawable/ic_launcher_foreground"
    app:showAsAction="never" />
  <item
    android:id="@+id/my"
    android:title="@string/menu_my"
    android:icon="@drawable/ic_launcher_foreground"
    app:showAsAction="never" />
</menu>